# C-Plus-plus-SurvivalGame

./: CMakeLists.txt  README.md
include/: ecs.hpp  game.hpp
src/: game.cpp  main.cpp
